<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llPatientDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:text="@string/name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/etEmpName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_rounded_border"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_med" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:text="@string/age"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etAge"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/et_rounded_border"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_med" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:text="@string/gender"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spGender"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/sp_rounded_border"
                    android:hint="@string/name"
                    android:inputType="textCapCharacters"
                    android:popupBackground="@color/colorWhiteLight2"
                    android:singleLine="true"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_med" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:text="@string/department"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/sp_rounded_border"
                    android:hint="@string/name"
                    android:inputType="textCapCharacters"
                    android:popupBackground="@color/colorWhiteLight2"
                    android:singleLine="true"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_med" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:text="@string/emp_type"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spEmpType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/sp_rounded_border"
                    android:hint="@string/name"
                    android:inputType="textCapCharacters"
                    android:popupBackground="@color/colorWhiteLight2"
                    android:singleLine="true"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_med" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_color_primary"
                android:text="@string/save_text"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_med"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_color_primary"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_med"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEmpList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPatientDetails" />


</androidx.constraintlayout.widget.ConstraintLayout>